fixed using DSA impl class